Create class for MainFrame

--- a/usermanagement/src/main/resources/settings.properties
+++ b/usermanagement/src/main/resources/settings.properties
@@ -3,4 +3,6 @@ connection.url=jdbc:hsqldb:file:db/usermanagement
 connection.user=sa
 connection.password=
 
+
+dao.factory = kn.dmytro_grazhevskiy.usermanagement.db.DaoFactoryImpl
 dao.kn.dmytro_grazhevskiy.usermanagement.db.UserDao = kn.dmytro_grazhevskiy.usermanagement.db.HsqldbUserDao
