--- a/usermanagement/src/main/webapp/WEB-INF/web.xml
+++ b/usermanagement/src/main/webapp/WEB-INF/web.xml
@@ -34,5 +34,15 @@
         <servlet-name>Edit Servlet</servlet-name>
         <url-pattern>/edit</url-pattern>
     </servlet-mapping>
+    
+     <servlet>
+        <servlet-name>Details Servlet</servlet-name>
+        <servlet-class>com.anamakarevich.usermanagement.web.DetailsServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>Details Servlet</servlet-name>
+        <url-pattern>/details</url-pattern>
+    </servlet-mapping>
 
 </web-app>    
